--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300&family=Montserrat&display=swap');
 
-h1 {
-    color: blue;
-
+* {
+    margin:0;
+    padding:0;
+    border: none;
 }
 
 body {
-    font-family: arial;
+    font-family: 'Montserrat', sans-serif;
 }
+
+h1 {
+    font-family: font-family: 'Arima Madurai', cursive;
+    font-weight: 400;
+    
