--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,58 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300&family=Montserrat&display=swap');
 
 
-   
 
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: white;
     text-align: left;
     font-weight: 400;
-    font-size: 150%;
+    font-size: 100%;
 }
 
 /* headings and logo */
-h1, h2 {
+h1,
+h2 {
     font-weight: 600;
     color: #0339A6;
     letter-spacing: 3px;
     font-family: 'Arima Madurai', cursive;
-  
+
 
 }
 
-#logo {
+h1 {
     font-family: 'Arima Madurai', cursive;
-    font-size: 250%;
+    font-size: 270%;
     text-align: center;
-    padding-top: 200px;
-    margin-top: 200px;
+
+    margin-top: 100px;
     letter-spacing: 2px;
 
 }
 
 /* navigation links */
+
 #menu {
     font-size: 110%;
-    letter-spacing: 1px;
     font-weight: 600;
     font-family: 'Arima Madurai', cursive;
-    color: #0339A6;  
+    color: #0339A6;
+  
+    
+}
+
+#menu li {
+    
+    list-style-type: none;
+    letter-spacing: 4px;
+    padding-top: 50px;
+    font-size: 110%;
+    display: inline-block;
+    margin-right: 50px;
 
 }
-   
-#menu li {
-    float: right;
-    list-style-type: none;
-    margin: 10px 20px 100px 20px;
-    letter-spacing: 1px;
+
+#menu ul {
+      display: table;
+      list-style-type: none;
+      text-align: center;
+      margin: 0auto; 
+      padding: 0px; 
+      display: block; 
+     
 
 }
 
 #menu a {
     text-decoration: none;
     color: inherit;
-    
 
 }
 
@@ -60,7 +74,7 @@ h1, h2 {
     border-bottom: 1px double #F2B84B;
 }
 
-active { 
+#menu a:active {
     border-bottom: 1px double #F2B84B;
 
 }
@@ -71,14 +85,28 @@ active {
 #main-container {
     font-family: 'Montserrat', sans-serif;
     background-color: white;
-    text-align: left;
+    text-align: justify;
     margin: 10px 50px 0 50px;
-    padding: 10px;
+    padding: 300px 300px 300px 300px;
     border: none;
-    text-align: center;
     max-width: 150%;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
+    line-height: 1.50;
+
 
 }
 
+/* #top-image {
 
+    background-image: url(../images/ashkenazi-haggadah-facsimile-edition-20_2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    height: auto;
+    width: auto;
+    padding: 300px 300px 300px 300px;
+    max-width: 100%;
+    max-height: 50%;
+
+} */
