--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,27 @@ body {
     font-size: 100%;
 }
 
-/* headings */
+/* Header image */
+
+#header-image {
+
+    background-image: url(../images/ashkenazi-haggadah-facsimile-edition-20_2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    padding: 400px 310px 290px 300px;
+    max-width: auto;
+    max-height: 80%;
+    min-height: 80%;
+    
+
+} 
+
+/* Headings */
 
 h2, h3 {
-    font-weight: 400;
+    font-weight: 600;
     color: #0339A6;
     letter-spacing: 3px;
     font-family: 'Arima Madurai', cursive;
@@ -84,7 +101,7 @@ h1 {
 /* all links */
 
 a:link {
-    color: green;
+    color: blue;
   
 }
 
@@ -94,7 +111,7 @@ a:visited {
 }
 
 a:hover {
-    color: #F2B84B;
+    color: #66CC00;
 
 }
 
@@ -148,6 +165,7 @@ a:hover {
     width: 70%;
     float: left;
     margin-right: 30px;
+    border-radius: 5px;
     
 
 }
@@ -175,13 +193,17 @@ th, td {
     margin-bottom: 20px;
     letter-spacing: 3px;
     margin-right: 10px;
-    font-weight: 400;
     border: 1px solid #ddd;
     
 }
 
 th {
     color: #0339A6;
+    font-weight: 600;
+}
+
+td {
+    font-weight: 600;
 }
 
 tr:nth-child(even){background-color: #F0F8FF;}
@@ -195,6 +217,7 @@ tr:hover {background-color: #ADD8E6;}
     padding: 20px 0 20px 0;
     margin: 20px 20px;
     height: 100%;
+    
 }
 
 
@@ -203,14 +226,14 @@ tr:hover {background-color: #ADD8E6;}
     width: 80%;
     text-align: left;
     float: inherit;
-    
-   
+     
 }
 
 #words-picture {
     width: 50%;
     float: left;
     margin: 0 50px 50px 0;
+    border-radius: 5px;
     
 }
 
@@ -218,14 +241,16 @@ tr:hover {background-color: #ADD8E6;}
 #div-second-image {
     width: 70%;
     text-align: left;
-    float: inherit;
+    float: right;
 
 }
 
 #second-image {
-    width: 70%;
+    max-width: 70%;
     text-align: left;
     float: right;
+    border-radius: 5px;
+    margin: 0 0 30px 30px;
 
 }
 
@@ -234,24 +259,26 @@ tr:hover {background-color: #ADD8E6;}
 
 .main-footer {
     background-color: #F4E2BE;
-    font-size: 90%;
+    font-size: 100%;
     font-weight: 600;
     font-family: 'Arima Madurai', cursive;
     color: #0339A6;
-    padding: 20px 20px;
+    padding: 40px;
     text-align: center;
-
+    width: 100%;
+    
 }
+
+
 
 .main-footer li {
     list-style-type: none;
     letter-spacing: 4px;
-    padding-top: 10px;
-    font-size: 90%;
+    padding: 10px 10px;
     display: inline-block;
     margin-right: 50px;
-
 }
+
 
 .main-footer ul {
       display: table;
@@ -261,7 +288,6 @@ tr:hover {background-color: #ADD8E6;}
       padding: 0px; 
       display: block; 
     
-
 }
 
 .main-footer a {
@@ -270,32 +296,18 @@ tr:hover {background-color: #ADD8E6;}
 }
 
 .main-footer a:hover {
-    color: #F2B84B;
+    color: #401801;
+    border-bottom: 2px solid #401801;
 }
 
 .copyright {
     text-align: center;
     color: black;
-    font-size: 90%;
+    font-size: 100%;
     font-weight: 600;
     font-family: 'Arima Madurai', cursive
-
+    
 }
 
 
-/* 
-Header image
- #header-image {
 
-    background-image: url(../images/ashkenazi-haggadah-facsimile-edition-20_2.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    height: auto;
-    width: auto;
-    padding: 300px 300px 300px 300px;
-    max-width: 100%;
-    max-height: 50%;
-
-}  */
