--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ a:hover {
 
 #hebrew-alphabet-introduction {
     width: 70%;
-    text-align: right;
+    text-align: left;
     margin-right: 30px;
 
 }
@@ -163,7 +163,7 @@ a:hover {
 #manuscript-picture {
     width: 70%;
     float: left;
-    margin-right: 30px;
+    margin: 40px 40px;
     border-radius: 5px;
     
 
@@ -253,7 +253,7 @@ tr:hover {background-color: #ADD8E6;}
     width: 50%;
     max-width: 100%;
     float: left;
-    margin: 0 50px 50px 0;
+    margin: 0 40px 30px 0;
     border-radius: 5px;
     
 }
@@ -270,7 +270,8 @@ tr:hover {background-color: #ADD8E6;}
 
 
 #second-image {
-    max-width: 65%;
+    width: 60%;
+    height: 60%;
     text-align: left;
     float: right;
     border-radius: 5px;
