--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300&family=Montserrat&display=swap');
 
-
-
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: white;
@@ -13,7 +11,6 @@ body {
 /* Header image */
 
 #header-image {
-
     background-image: url(../images/ashkenazi-haggadah-facsimile-edition-20_2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -23,9 +20,7 @@ body {
     margin: 0;
     max-height: 80%;
     min-height: 450px;
-    
-
-} 
+}
 
 /* Headings */
 
@@ -36,19 +31,16 @@ h1 {
     margin: 100px 100px;
     letter-spacing: 3px;
     color: #0339A6;
-
 }
 
-h2, h3 {
+h2,
+h3 {
     font-weight: 600;
     color: #D95252;
     letter-spacing: 3px;
     font-family: 'Arima Madurai', cursive;
     text-align: left;
-
 }
-
-
 
 /* header navigation links */
 
@@ -57,19 +49,17 @@ h2, h3 {
     font-weight: 600;
     font-family: 'Arima Madurai', cursive;
     color: #0339A6;
-    background-color: white; 
-    
+    background-color: white;
 }
 
 
 #menu ul {
-      display: table;
-      list-style-type: none;
-      text-align: center;
-      margin: 0 auto; 
-      padding: 0 px; 
-      display: block; 
-     
+    display: table;
+    list-style-type: none;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0 px;
+    display: block;
 }
 
 
@@ -80,7 +70,6 @@ h2, h3 {
     font-size: 110%;
     display: inline-block;
     margin-right: 50px;
-
 }
 
 #menu a {
@@ -97,54 +86,41 @@ h2, h3 {
 
 #menu a:hover {
     color: #F2B84B;
-    
-     
 }
 
 /* all links */
 
 a:link {
     color: blue;
-  
 }
 
 a:visited {
     color: #0339A6;
-
 }
 
 a:hover {
     color: #66CC00;
-
 }
 
 
-/* home page */
+/* Home page */
 
 .main-container {
     font-family: 'Montserrat', sans-serif;
     background-color: white;
     text-align: left;
     margin: 50px auto;
-    /* padding: 80px 300px 300px 300px; */
     border: none;
     max-width: 860px;
     letter-spacing: 2px;
     line-height: 1.50;
     height: 100%;
-    /* width: auto; */
     color: black;
-    
-    
 }
 
-
 #div-home-image {
-    background-color:white; 
-    /* padding: 20px; */
+    background-color: white;
     border: none;
-    /* max-width: 300%; */
-    
 }
 
 #home-image {
@@ -152,32 +128,26 @@ a:hover {
     max-width: 60%;
     /* padding: 30px 20px 20px 50px; */
     margin: 0 auto;
-  
-
 }
 
 /* hebrew alphabet page */
 
-#hebrew-alphabet-introduction {
+#alphabet-introduction {
     width: 70%;
     text-align: left;
     margin-right: 30px;
-
 }
 
-#manuscript-picture {
+#alphabet-picture {
     width: 70%;
     float: left;
     margin: 40px 40px;
     border-radius: 5px;
-    
-
 }
 
 /* hebrew alphabet table */
 
-#alphabet-table
-{
+#alphabet-table {
     max-width: 100%;
     font-family: 'Montserrat', sans-serif;
     background-color: white;
@@ -190,7 +160,8 @@ table {
     border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
     text-align: center;
     padding: 20px;
     margin-right: 10px;
@@ -198,7 +169,6 @@ th, td {
     letter-spacing: 3px;
     margin-right: 10px;
     border: 1px solid #ddd;
-    
 }
 
 th {
@@ -210,9 +180,13 @@ td {
     font-weight: 400;
 }
 
-tr:nth-child(even){background-color: #F0F8FF;}
-tr:hover {background-color: #ADD8E6;}
+tr:nth-child(even) {
+    background-color: #F0F8FF;
+}
 
+tr:hover {
+    background-color: #ADD8E6;
+}
 
 /* Vowels image */
 
@@ -221,15 +195,11 @@ tr:hover {background-color: #ADD8E6;}
     padding: 20px 0 20px 0;
     margin: 20px 20px;
     height: 100%;
-    
 }
-
-
 
 /* Common Hebrew Phrases Page */
 
 #container-words-page {
-
     font-family: 'Montserrat', sans-serif;
     background-color: white;
     text-align: left;
@@ -242,16 +212,12 @@ tr:hover {background-color: #ADD8E6;}
     height: 100%;
     max-width: 860px;
     color: black;
-
-
 }
-
 
 #words-introduction {
     width: 80%;
     text-align: left;
     float: inherit;
-     
 }
 
 #words-picture {
@@ -260,7 +226,6 @@ tr:hover {background-color: #ADD8E6;}
     float: left;
     margin: 0 40px 30px 0;
     border-radius: 5px;
-    
 }
 
 .clear {
@@ -281,12 +246,8 @@ tr:hover {background-color: #ADD8E6;}
     float: right;
     border-radius: 5px;
     margin: 0 0 50px 50px;
- 
+
 }
-
-
-
-
 
 /* Footer */
 
@@ -299,9 +260,8 @@ tr:hover {background-color: #ADD8E6;}
     padding: 40px 0;
     text-align: center;
     margin: 0;
-    
-}
 
+}
 
 .main-footer li {
     list-style-type: none;
@@ -311,15 +271,14 @@ tr:hover {background-color: #ADD8E6;}
     margin-right: 50px;
 }
 
-
 .main-footer ul {
-      display: table;
-      list-style-type: none;
-      text-align: center;
-      margin: 0 auto; 
-      padding: 0px; 
-      display: block; 
-    
+    display: table;
+    list-style-type: none;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0px;
+    display: block;
+
 }
 
 .main-footer a {
@@ -337,20 +296,26 @@ tr:hover {background-color: #ADD8E6;}
     color: black;
     font-size: 100%;
     font-weight: 600;
-    font-family: 'Arima Madurai', cursive  
+    font-family: 'Arima Madurai', cursive
 }
 
 /* Media queries */
 
 /* For large to medium screen size from 800 and down */
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 370px) {
+
     .main-container,
-    #container-words-page  {
+    #container-words-page {
         margin: 0;
         padding: 0 5px;
-        max-width: 100%;   
+        max-width: 100%;
     }
-    
+
+    #header-image {
+        background-size: cover;
+        background-position: center;
+    }
+
     h1 {
         padding-left: 10px;
         text-align: center;
@@ -365,24 +330,78 @@ tr:hover {background-color: #ADD8E6;}
         width: 100%;
     }
 
-  #manuscript-picture {
-      margin: 10px;
-      padding: 10px 10px 0 0;
-     
-  }
-  #alphabet-table {
-    max-width:  340px;
-    overflow-x: scroll;
-  }
+    #manuscript-picture {
+        margin: 10px;
+        padding: 10px 10px 0 0;
+    }
 
+    #alphabet-table {
+        max-width: 340px;
+        overflow-x: scroll;
+    }
 }
 
 @media screen and (max-width: 535px) {
     #menu a.active {
-        color: #F2B84B;
-        
+        border: none;
+
+    }
+}
+
+@media screen and (max-width: 440px) {
+    #main-points {
+        text-align: left;
+        width: 100%;
+        padding: 5px;
+        float: left;
+    }
+
+    #alphabet-picture {
+        width: 120%;
+    }
+
+    h1 {
+        text-align: left;
+        float: left;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    h1 {
+        font-size: 45px;
+    }
+
+    #alphabet-table {
+        max-width: 450px;
+        overflow-x: scroll;
     }
 }
 
 
 
+@media screen and (max-width: 730px) {
+    body {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+
+    }
+}
+
+@media screen and (max-width: 770px) {
+    #alphabet-table {
+        max-width: 600px;
+        overflow-x: scroll;
+    }
+}
+
+@media screen and (max-width: 880px) {
+
+    .main-container,
+    #container-words-page {
+        margin: 10px;
+        padding: 0 5px;
+        max-width: 100%;
+    }
+
+}
