Correct source code on all pages. Add further info on readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,10 @@ a:hover {
     margin: 0 auto;
 }
 
+#main-points ul {
+    list-style-type: none;
+}
+
 /* hebrew alphabet page */
 
 #alphabet-introduction {
